backend/k8s/base/mqtt/mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-broker
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mqtt-broker
  template:
    metadata:
      labels:
        app: mqtt-broker
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          ports:
            - name: websocket
              containerPort: 9001
              protocol: TCP
            - name: mqtt
              containerPort: 1883
          volumeMounts:
            - name: data
              mountPath: /mosquitto/
            - name: config
              mountPath: /mosquitto/config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: mqtt-config
            items:
              - key: "mosquitto"
                path: "mosquitto.conf"

        - name: data
          emptyDir: {}
