backend/k8s/base/mqtt/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker
spec:
  ports:
    - name: websocket
      port: 9001
      targetPort: 9001
    - name: mqtt
      port: 1883
      targetPort: 1883
  selector:
    app: mqtt-broker
  type: LoadBalancer
